--- a/WebConsulting/Pages/Services.razor
+++ b/WebConsulting/Pages/Services.razor
@@ -18,7 +18,7 @@
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-                    <img src="https://clck.ru/3FBFcu" alt="Консалтинг" class="w-full h-48 object-cover">
+                    <img src="/images/1.jpg" alt="Консалтинг" class="w-full h-48 object-cover">
                     <div class="p-4">
                         <h3 class="text-xl font-bold text-gray-800">Консалтинг</h3>
                         <p class="mt-2 text-gray-600">Набор консалтинговых услуг для бизнеса:</p>
@@ -32,7 +32,7 @@
                 </div>
 
                 <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-                    <img src="https://clck.ru/3FBFYd" alt="Организационное построение" class="w-full h-48 object-cover">
+                    <img src="/images/2.jpg" alt="Организационное построение" class="w-full h-48 object-cover">
                     <div class="p-4">
                         <h3 class="text-xl font-bold text-gray-800">Организационное построение</h3>
                         <p class="mt-2 text-gray-600">Построение и модернизация организационного управления:</p>
@@ -45,7 +45,7 @@
                 </div>
 
                 <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-                    <img src="https://clck.ru/3FBFZt" alt="Повышение эффективности" class="w-full h-48 object-cover">
+                    <img src="/images/3.jpg" alt="Повышение эффективности" class="w-full h-48 object-cover">
                     <div class="p-4">
                         <h3 class="text-xl font-bold text-gray-800">Повышение эффективности</h3>
                         <p class="mt-2 text-gray-600">Услуги и инструменты для увеличения производительности:</p>
@@ -58,7 +58,7 @@
                 </div>
 
                 <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-                    <img src="https://clck.ru/3FBFaQ" alt="Бизнес-анализ" class="w-full h-48 object-cover">
+                    <img src="/images/4.jpg" alt="Бизнес-анализ" class="w-full h-48 object-cover">
                     <div class="p-4">
                         <h3 class="text-xl font-bold text-gray-800">Бизнес-анализ</h3>
                         <p class="mt-2 text-gray-600">Анализ и оценка эффективности работы компаний:</p>
@@ -67,10 +67,8 @@
                             <li><a href="/Services/Management">Исследование конкурентов</a></li>
                         </ul>
                     </div>
-                </div>
-
-                <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-                    <img src="https://clck.ru/3FBFdG" alt="Система менеджмента качества ISO 9001" class="w-full h-48 object-cover">
+                </div><div class="bg-white shadow-lg rounded-lg overflow-hidden">
+                    <img src="/images/5.jpg" alt="Система менеджмента качества ISO 9001" class="w-full h-48 object-cover">
                     <div class="p-4">
                         <h3 class="text-xl font-bold text-gray-800">Система менеджмента качества ISO 9001</h3>
                         <p class="mt-2 text-gray-600">Консалтинг и сопровождение внедрения:</p>
