--- a/WebConsulting/Pages/Main.razor
+++ b/WebConsulting/Pages/Main.razor
@@ -28,14 +28,14 @@
                 <p class="mt-4 text-gray-600">Мы стремимся к тому, чтобы наши клиенты достигали своих стратегических целей и планов, получая при этом высококлассные консалтинговые услуги, адаптированные под их индивидуальные потребности.</p>
                 <p class="mt-4 text-gray-800 font-bold">Reputation — доверие и профессионализм в каждом шаге!</p>
             </div>
-            <img src="https://clck.ru/3FBEej" alt="Team at work" class="rounded-lg shadow-md">
+            <img src="/images/main1.jpg" alt="Team at work" class="rounded-lg shadow-md">
         </div>
     </section>
 
 
     <section class="bg-gray-50 py-16">
         <div class="container mx-auto grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
-            <img src="https://clck.ru/3FBET2" alt="Mission" class="rounded-lg shadow-md">
+            <img src="/images/main2.jpg" alt="Mission" class="rounded-lg shadow-md">
             <div>
                 <h2 class="text-2xl font-bold text-gray-800">Наша миссия</h2>
                 <p class="mt-4 text-gray-600">Наша миссия заключается в том, чтобы выявлять и развивать внутренние возможности наших клиентов для роста и устойчивого развития. Мы стремимся к созданию таких решений, которые будут не только отвечать текущим потребностям бизнеса, но и способствовать его долгосрочному успеху.</p>
@@ -44,8 +44,6 @@
             </div>
         </div>
     </section>
-
-
     <section class="bg-white py-16">
         <div class="container mx-auto text-center">
             <h2 class="text-3xl font-bold text-gray-800">Мы в цифрах</h2>
